# CodeIndexer

./: .gitignore  .gitignore_old_files  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TREE_SITTER_FIXES.md  clear_knowledge_graph.py  direct_graph_builder.py  direct_module_test_report.md  docker-compose.milvus.yml  docker-compose.yml  docker-entrypoint.sh  enhanced_graph_builder.py  find_adk_paths.py  generate_graph_report.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_enhanced_graph_builder.py  run_ingestion.py  run_module_tests.py  simple_test.py  test_function_extraction.py  test_modules_directly.py  update_imports.py
analysis/: adk_patterns.md  agent_interactions_diagram.md  architecture_analysis.md  ast_tool_analysis.md  challenges_and_gaps.md  deleted_files_handling.md  e2e_agentic_flow.md  e2e_agentic_flow_summary.md  file_processing_analysis.md  file_processing_summary.md  final_executive_summary.md  git_ast_pipeline_evaluation.md  improvements_and_optimizations.md  integrated_analysis.md  language_detection_assessment.md  milvus_integration.md  summary_report.md  technical_feasibility.md  updated_recommendations.md  vector_store_abstraction.md  vector_store_comparison.md  vector_store_flexibility.md  vector_store_summary.md
code_indexer/agents/: adk_adapter.py  answer_composer_agent.py  chunker_agent.py  code_parser_agent.py  compatibility.py  dead_code_detector_agent.py  embedding_agent.py  git_ingestion_agent.py  graph_builder_agent.py  graph_search_agent.py  query_agent.py  search_orchestrator_agent.py  update_template.py  vector_search_agent.py  vector_store_agent.py
code_indexer/api/: search_api.py
code_indexer/cli/: search_cli.py
code_indexer/config/: vector_store_config.yaml
code_indexer/ingestion/: __init__.py  cli.py  pipeline.py
code_indexer/semantic/: __init__.py  api.py
code_indexer/tools/: ast_extractor.py  build_tree_sitter.py  code_chunking_tool.py  embedding_tool.py  git_tool.py  milvus_vector_store.py  neo4j_tool.py  setup_languages.py  setup_tree_sitter.py  tree_sitter_parser.py  vector_store_factory.py  (+1 more)
docs/: Ingestion-Design-Blueprint.md  agentic_flow_technical_report.md  codebase_structure.md  docker_setup.md  end_to_end_example.md  getting_started.md  graph_schema.md  index.md  ingestion-flow-professional-overview.md  ingestion-flow.md  milvus_integration.md  pipeline-architecture-details.md  pipeline-architecture-diagrams.md  placeholder_pattern.md  running_tests.md  search_functionality.md  ssh_authentication.md  testing.md  tree-sitter-ingestion-improvements.md  troubleshooting.md
examples/: milvus_store_example.py
ingestion_pipeline/: README.md  __init__.py  direct_code_parser.py  direct_neo4j_tool.py  requirements.txt  run_direct_pipeline.py  run_pipeline.py  setup_tree_sitter.py
teams/: indexing_team.yaml  nightly_jobs.yaml  query_team.yaml
test_repo/: test.py
tests/: conftest.py  utils.py
(+60 files in other folders)
